removed ratings column

--- a/templates/dashboard.html
+++ b/templates/dashboard.html
@@ -91,7 +91,7 @@
                                         <label> Date:
                                             <input id="date" name='date' type="date">
                                         </label><br>
-                                        <label>Complete<input type='checkbox' id='complete' name='complete' value='true'>
+                                        <label>Done<input type='checkbox' id='complete' name='complete' value='true'>
                                         </label><br>
 
                                         <input type='file' id='photo' name='file'/> <br>
@@ -130,9 +130,8 @@
                     <th class="col-xs-1" onclick="w3.sortHTML('#projects', '.item', 'td:nth-child(3)')" style="cursor:pointer">Name<span class="glyphicon glyphicon-menu-down" aria-hidden="true"></span> </th>
                     <th class="col-xs-1" onclick="w3.sortHTML('#projects', '.item', 'td:nth-child(4)')" style="cursor:pointer">State<span class="glyphicon glyphicon-menu-down" aria-hidden="true"></span> </th>
                     <th class="col-xs-1" onclick="w3.sortHTML('#projects', '.item', 'td:nth-child(5)')" style="cursor:pointer">Area<span class="glyphicon glyphicon-menu-down" aria-hidden="true"></span> </th>
-                    <th class="col-xs-1" onclick="w3.sortHTML('#projects', '.item', 'td:nth-child(6)')" style="cursor:pointer">Rating<span class="glyphicon glyphicon-menu-down" aria-hidden="true"></span></th>
                     <th class="col-xs-3"> Notes</th>
-                    <th class="col-xs-1">Complete</th>
+                    <th class="col-xs-1">Done</th>
                     <th class="col-xs-1">Update</th>
                     <th class="col-xs-1"></th>
                 </tr>
