--- a/static/styles.css
+++ b/static/styles.css
@@ -9,6 +9,10 @@ table {
 
 }
 
+#projects{
+  word-break: keep-all;
+}
+
 body {
     padding-top: 50px;
     background-color: #668e9b;
@@ -18,7 +22,7 @@ body {
 }
 
 input {
-     width: 100%; 
+     width: 100%;
      color: #18121E;
 }
 
@@ -73,10 +77,7 @@ h4, h5 {
 th {
     background-color: #738B95;
     font-color: #18121E;
-}
-
-th a:hover {
-    font-color: #fff;
+    white-space: nowrap;
 }
 
 .glyphicon-menu-down:hover {
