--- a/templates/dashboard.html
+++ b/templates/dashboard.html
@@ -148,7 +148,7 @@
                     <th onclick="w3.sortHTML('#completedClimbs', '.item', 'td:nth-child(3)')" style="cursor:pointer">Name <span class="glyphicon glyphicon-menu-down" aria-hidden="true"></span></th>
                     <th onclick="w3.sortHTML('#completedClimbs', '.item', 'td:nth-child(4)')" style="cursor:pointer">State <span class="glyphicon glyphicon-menu-down" aria-hidden="true"></span></th>
                     <th onclick="w3.sortHTML('#completedClimbs', '.item', 'td:nth-child(5)')" style="cursor:pointer">Area <span class="glyphicon glyphicon-menu-down" aria-hidden="true"></span></th>
-                    <th onclick="w3.sortHTML('#completedClimbs', '.item', 'td:nth-child(6)')" style="cursor:pointer">Rating <span class="glyphicon glyphicon-menu-down" aria-hidden="true"></span></th>
+ <!--                    <th onclick="w3.sortHTML('#completedClimbs', '.item', 'td:nth-child(6)')" style="cursor:pointer">Rating <span class="glyphicon glyphicon-menu-down" aria-hidden="true"></span></th> -->
                     <th>Notes</th>
                 </tr>
 
