--- a/templates/register.html
+++ b/templates/register.html
@@ -9,31 +9,25 @@
 
   <div class="row">
 
-    <div class="col-md-4 col-md-offset-4">
+    <div class="col-3 col-sm-3 col-sm-offset-4 col-md-4 col-md-offset-4 col-lg-3 col-lg-offset-4">
         <h2>Sign Up</h2>
-        <form action='/register-user' id='register' method='POST'>
+        <form action='/register-user' method='POST'>
             <label>Username:
-                <input type='username' name='username' required>
+                <input type='username' class='form-control' name='username' required>
             </label><br>
             
             <label>Password:
-                <input type='password' name='password' required>
+                <input type='password' class='form-control' name='password' required>
             </label><br>
 
             <label>Email:
-                <input type='email' name='email' required>
+                <input type='email' class='form-control' name='email' required>
             </label><br>
 
-            <input type='submit' value='Create Account'>
+            <input type='submit' class='form-control' value='Create Account'>
         </form>
         <a href="/">go back</a>
     </div>
 </div>
-<script>
-body {
-  background-image: url("static/crossword.png");
-}
-</script>
-
 
 {% endblock %}
