log climb form resets when log submitted

--- a/templates/register.html
+++ b/templates/register.html
@@ -13,18 +13,18 @@
         <h2>Sign Up</h2>
         <form action='/register-user' method='POST'>
             <label>Username:
-                <input type='username' class='form-control' name='username' required>
+                <input type='username' name='username' required>
             </label><br>
             
             <label>Password:
-                <input type='password' class='form-control' name='password' required>
+                <input type='password' name='password' required>
             </label><br>
 
             <label>Email:
-                <input type='email' class='form-control' name='email' required>
+                <input type='email' name='email' required>
             </label><br>
 
-            <input type='submit' class='form-control' value='Create Account'>
+            <input type='submit' value='Create Account'>
         </form>
         <a href="/">go back</a>
     </div>
