added default US map if user has no log entries yet

--- a/templates/dashboard.html
+++ b/templates/dashboard.html
@@ -82,7 +82,7 @@
                                             <option disable selected value> -- ROUTE -- </option>
                                         </select><br>
                                         
-                                        <label> Rate the climb:
+                                        <label> Rating
                                             <input type='number' id='rating' name='rating' min='1' max='5'">
                                         </label><br>
                                         
@@ -90,11 +90,13 @@
                                             <textarea name='notes' id='notes' rows="4" cols="50"></textarea>
                                         </label><br>
                                         
-                                        <label> Date:
+                                        <label> Date
                                             <input id="date" name='date' type="date">
                                         </label><br>
-                                        <label>Done <input type='checkbox' id='complete' name='complete' value='true'>
-                                        </label><br>
+
+                                        <label> Done
+                                            <input type='checkbox' id='complete' name='complete' value='true'>
+                                        </label>
 
                                         <input type='file' id='photo' name='file'/> <br>
                                         
